waveSampled plot waveform.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(waveSampling)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
+importFrom(graphics,lines)
 importFrom(graphics,segments)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_table)
