--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,15 @@
 export(storageCosts)
 export(waveSampled)
 export(waveSampling)
+export(wave_particle)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
 importFrom(graphics,lines)
+importFrom(graphics,par)
 importFrom(graphics,segments)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_table)
 importFrom(rvest,read_html)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
